# apps/api/openapi.json
@@ -894,6 +894,10 @@
           "assignedVolumeM3" : {
             "type" : "number"
           },
+          "availableVehicles" : {
+            "format" : "int32",
+            "type" : "integer"
+          },
           "avgVolumeUtilisation" : {
             "type" : "number"
           },
@@ -917,6 +921,13 @@
           },
           "totalFuelLitres" : {
             "type" : "number"
+          },
+          "totalOrderVolumeM3" : {
+            "type" : "number"
+          },
+          "totalOrders" : {
+            "format" : "int32",
+            "type" : "integer"
           },
           "tripsUsed" : {
             "format" : "int32",
@@ -1279,10 +1290,17 @@
       },
       "TripLoad" : {
         "properties" : {
+          "stopCount" : {
+            "format" : "int32",
+            "type" : "integer"
+          },
           "volumeLimitM3" : {
             "type" : "number"
           },
           "volumeUsedM3" : {
+            "type" : "number"
+          },
+          "volumeUtilisationPct" : {
             "type" : "number"
           },
           "weightLimitKg" : {
